<resources>
    <string name="app_name">AIDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleimage">titleimage</string>
    <string name="titletext">AI Demo</string>
    <string name="button1">图像分类</string>
    <string name="button2">目标检测</string>
    <string name="button3">超分辨率</string>
    <string name="button4">风格迁移</string>
    <string name="button5">人脸关键点</string>
    <string name="button6">人体关节检测</string>
    <string name="button7"> OCR </string>
    <string name="dialog_tile">Are you sure?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancle">Cancle</string>
</resources>